<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Hello World!</string>
    <string name="posts_button">POSTS</string>
    <string name="events_button">EVENTS</string>
    <string name="description_logo">Logo</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_event_menu">Event menu</string>
    <string name="description_job_menu">Job menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>v
    <string name="description_post_attachment">Attachment</string>
    <string name="description_post_video">Video attachment</string>
    <string name="description_maps">Maps</string>
    <string name="post_content_hint">Enter here your post text</string>
    <string name="event_content_hint">Enter here your event text</string>
    <string name="link_hint">Insert link</string>
    <string name="name_hint">Enter name of job</string>
    <string name="position_hint">Enter position</string>
    <string name="start_job_tint">Enter start of job</string>
    <string name="finish_job_tint">Enter finish of job</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>
    <string name="long_ago">Long ago</string>
    <string name="not_autorized">You are not autorised</string>
    <string name="login_input">Login</string>
    <string name="password_input">Password</string>
    <string name="name_input">User name</string>
    <string name="login">Log in</string>
    <string name="welcome">Welcome to social network NEWORK</string>
    <string name="author_by">Developed by K.Korostylev(k.korostylevgmail.com)</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="not_registered">Not registered?</string>
    <string name="join">Join to NeWork</string>
    <string name="register">Register</string>
    <string name="error">Something wrong. Try later</string>
    <string name="registration_success">Success registration</string>
    <string name="user_exists">Same user already exists!</string>
    <string name="min_length">Min lenght: 1</string>
    <string name="editing_post">Post editing</string>
    <string name="editing_event">Event editing</string>
    <string name="new_post">New post</string>
    <string name="new_event">New event</string>
    <string name="new_job">New Job</string>
    <string name="user_links">User links</string>
    <string name="events_list">Events</string>
    <string name="posts_list">Posts</string>
    <string name="jobs_list">Jobs</string>
    <string name="my_posts_list">My posts</string>
    <string name="description_pick_audio">Pick audio file</string>
    <string name="description_pick_video">Pick video</string>
    <string name="description_remove_attachment">Remove attachment</string>
    <string name="set_date_time">Set date/time</string>
    <string name="set_date_time_start">Set date/time of start</string>
    <string name="set_date_time_finish">Set date/time of finish</string>
    <string name="event_online">Online</string>
    <string name="event_offline">Offline</string>
    <string name="post">Post</string>
    <string name="event">Event</string>
    <string name="liked_users">liked by next users:</string>
    <string name="my_wall_button">MY WALL</string>
    <string name="my_jobs_button">MY JOBS</string>






</resources>