<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/welcome_title"
        android:orientation="vertical"
        android:layout_weight="30"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo">

        </ImageView>
        <TextView
            android:gravity="center"
            android:layout_marginVertical="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="@string/welcome"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth"
        android:gravity="center"
        android:layout_weight="30"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_input"/>
        <EditText
            android:id="@+id/login"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:background="@drawable/edit_text"/>
        <TextView
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_input"/>
        <EditText
            android:id="@+id/password"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/edit_text"/>
        <Button
            android:id="@+id/button_login"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <TextView
            android:id="@+id/registration"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"/>
        <Button
            android:id="@+id/button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/author"
        android:layout_weight="40"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/author_by"/>
    </LinearLayout>

</LinearLayout>